--- a/editor/style.css
+++ b/editor/style.css
@@ -41,6 +41,9 @@ form {
 .over .dropsign {
 	border: .5rem #78909C dashed;
 	position: fixed;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 	top: 50%;
 	left: 50%;
 	width: 99vw;
@@ -49,6 +52,12 @@ form {
 	z-index: 99;
 	opacity: .5;
 	pointer-events: none;
+}
+
+.over .dropsign:after {
+	content: '\2795';
+	font-size: 6rem;
+	font-weight: 600;
 }
 
 form p {
@@ -199,4 +208,10 @@ progress::-moz-progress-bar {
 progress:not([value]), progress[value="0"] {
 	opacity: 0;
 }
+
+form .preview {
+	display: grid;
+}
+
+
 
