--- a/editor/style.css
+++ b/editor/style.css
@@ -21,12 +21,59 @@ html {
 body {
 	font: 400 1rem sans-serif;
 	color: #424242;
+	padding: 1rem 0;
 	line-height: 1.5rem;
 }
 
-main {
+nav ul {
+	list-style: none;
+	line-height: 1;
+	margin: 0;
+}
+
+nav ul li {
+	display: inline-block;
+}
+
+nav ul li a {
+	text-decoration: none;
+}
+
+nav {
+	font-size: 85%;
+	color: #263238;
+}
+
+nav ul li + li:before {
+	content: ' ';
+	margin: 0 .5rem;
+	font-size: 80%;
+}
+
+nav.path ul li + li:before {
+	content: ' > ';
+	color: #9E9E9E;
+}
+
+nav ul li a, nav ul li span {
+	font-weight: 800;
+}
+
+nav.links {
+	text-align: right;
+}
+
+nav.path ul li a {
+	color: #0277BD;
+}
+
+main, header nav {
 	max-width: 44rem;
-	margin: 1rem auto;
+	margin: 0 auto;
+}
+
+main {
+	margin-bottom: 2rem;
 }
 
 main p + p {
@@ -34,7 +81,8 @@ main p + p {
 }
 
 form {
-	padding: 0 1rem;
+	margin-top: 1rem;
+	padding: 0;
 	padding-bottom: 1rem;
 }
 
@@ -100,7 +148,7 @@ input, textarea, .btn {
 	border-bottom: .2rem solid #9E9E9E;
 }
 
-input[type="text"], textarea {
+input[type="text"], input[type="password"], textarea {
 	padding: .5rem 0;
 }
 
@@ -142,7 +190,7 @@ input:placeholder-shown + label, textarea:placeholder-shown + label {
 	transform: translateY( 1rem );
 }
 
-form.anim input[type="text"], form.anim textarea {
+form.anim input[type="text"], form.anim input[type="password"], form.anim textarea {
 	display: block;
 	width: 100%;
 }
@@ -209,9 +257,33 @@ progress:not([value]), progress[value="0"] {
 	opacity: 0;
 }
 
-form .preview {
-	display: grid;
+figure img {
+	width: 100%; 
+	height: auto;
+	border-bottom: 1px solid #78909C;
+	padding-bottom: 1rem;
+	margin-bottom: .5rem;
 }
 
+.preview {
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr;
+	grid-gap: 1.5rem;
+}
 
+.preview figure {
+	display: inline-block;
+}
 
+.preview figure figcaption {
+	font-size: .9rem;
+	color: #444;
+}
+
+@media screen and (max-width: 50rem) { 
+	.preview { grid-template-columns: 1fr 1fr; }
+}
+
+@media screen and (max-width: 30rem) { 
+	.preview { grid-template-columns: 1fr; grid-gap: 0; }
+}
